syntax = "proto3";

option java_multiple_files = true;
option java_package = "AlarmController";
option java_outer_classname = "AlarmControlsImpl";

service Service3 {
  rpc manualAlarm(ManualAlarmRequest) returns (stream ManualAlarmResponse) {}

  rpc fireSuppression(FireSuppressionRequest) returns (stream FireSuppressionResponse) {}

  rpc emergencyServicesCall(EmergencyServicesCallRequest) returns (EmergencyServicesCallResponse) {}
}

message ManualAlarmRequest {
  string alarmID = 1;

  string alarmTriggered = 2;
}

message ManualAlarmResponse {
  string activateEmergencyLighting = 1;

  string activateEmergencySirens = 2;
}

message FireSuppressionRequest {
  string sensorID = 1;

  string typeOfHazard = 2;
}

message FireSuppressionResponse {
  string activateEmergencyLighting = 1;

  string activateEmergencySirens = 2;

  string activateFireSuppression = 3;
}

message EmergencyServicesCallRequest {
  string alarmTriggered = 1;
}

message EmergencyServicesCallResponse {
  string callConfirmation = 1;
}